--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Edit effect in game.
 Use Sparrow XML and PNG texture(For example TexturePacker output these format files). 
 Base on Codeooth(https://github.com/chengkehan/CodeTooth-AS3-Toolkit-)
+Base on Ghostcat(http://code.google.com/p/ghostcat/)
